[package]
name = "gravity_bundler"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
serde_derive = "1.0.203"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ethers = "2.0.14"
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.117"
ethers-flashbots = "0.15.0"
anyhow = "1.0.86"
url = "2.5.1"
crossterm = "0.27.0"
thousands = "0.2.0"
spinners = "4.1.1"
futures = "0.3.30"
rand = "0.8"
